--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
+        "orchestra/parser": "^6.0",
         "socialiteproviders/facebook": "^4.1",
         "socialiteproviders/vkontakte": "^4.2"
     },
