--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
         "orchestra/parser": "^6.0",
+        "predis/predis": "^1.1",
         "socialiteproviders/facebook": "^4.1",
         "socialiteproviders/vkontakte": "^4.2"
     },
